piccola bozza server

--- a/doc/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/arch.tex
@@ -2,4 +2,21 @@
 %%  Descrizione dell'architettura
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\subsection{Metodo e formalismo di specifica}
+blablablablablabla
+\subsection{Architettura generale}
+L'architettura dell'applicazione è suddivisa in due moduli(REST ecce ecce).....
+\begin{enumerate}
+\item Client
+\item Server
+\end{enumerate}
+\subsubsection{Architetura Client}
+menos e berga
+\subsubsection{Architettura Server}
+Il server si occupa di fornire servizi REST ed elaborare le richieste (i dati) in arrivo dal client. Il back-end del server è stato suddiviso nei seguenti due moduli (penso):
+\begin{itemize}
+\item controller: rappresenta il core del back-end. Si occupa di ricevere ed elaborare le richieste provenienti dal client.
+\item endpoints: per la REST (ce l'abbiamo???)
+\end{itemize}
+\subsubsection{Protocollo di comunicazione Client-Server}
 %%% [...]
