--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -76,9 +76,8 @@ Con il presente documento il gruppo \hx{} si impegna a sviluppare un prodotto ch
 \subsection{Riferimenti}
 \subsubsection{Normativi}
 \begin{itemize}
-	\item \textbf{Norme di Progetto}: \NdP;
-	\item \textbf{Capitolato d'appalto C6, \proj}: \\
-	\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.\gloss{pdf}}.
+	\item Norme di Progetto: \NdP;
+	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}.
 \end{itemize}
 
 \subsubsection{Informativi}
@@ -2464,10 +2463,6 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 & &\hyperref[UC4.2]{UC4.2}\\
 & &\hyperref[UC4.2.2]{UC4.2.2}\\ \hline
 
-\hypertarget{RFO3.2.2.1}{RFO3.2.2.1} & l'attore può rimuovere un commento &  \hyperlink{Interno}{Interno}\\
-& &\hyperref[UC4]{UC4}\\
-& &\hyperref[UC4.6]{UC4.6}\\ \hline
-
 \hypertarget{RFO3.2.3}{RFO3.2.3} & l'attore può scegliere la classe di destinazione per la relazione & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.2]{UC4.2}\\
 & &\hyperref[UC4.2.3]{UC4.2.3}\\ \hline
@@ -3218,10 +3213,6 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 & \hyperref[UC4.2]{UC4.2}\\
 & \hyperref[UC4.2.2]{UC4.2.2}\\ \hline
 
-\hyperlink{RFO3.2.2.1}{RFO3.2.2.1} & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.6]{UC4.6}\\ \hline
-
 \hyperlink{RFO3.2.3}{RFO3.2.3} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC4.2]{UC4.2}\\
 & \hyperref[UC4.2.3]{UC4.2.3}\\ \hline
@@ -3852,7 +3843,6 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 & \hyperlink{RFO3.2}{RFO3.2}\\
 & \hyperlink{RFO3.2.1}{RFO3.2.1}\\
 & \hyperlink{RFO3.2.2}{RFO3.2.2}\\
-& \hyperlink{RFO3.2.2.1}{RFO3.2.2.1}\\
 & \hyperlink{RFO3.2.3}{RFO3.2.3}\\
 & \hyperlink{RFO3.2.4}{RFO3.2.4}\\
 & \hyperlink{RFO3.2.5}{RFO3.2.5}\\
@@ -4007,7 +3997,6 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hyperref[UC4]{UC4} & \hyperlink{RFO3}{RFO3}\\
 & \hyperlink{RFO3.1}{RFO3.1}\\
 & \hyperlink{RFO3.2}{RFO3.2}\\
-& \hyperlink{RFO3.2.2.1}{RFO3.2.2.1}\\
 & \hyperlink{RFO3.3}{RFO3.3}\\
 & \hyperlink{RFO3.4}{RFO3.4}\\
 
@@ -4107,7 +4096,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hyperref[UC4.3.3.1]{UC4.3.3.1} & \hyperlink{RFO3.3.3.1}{RFO3.3.3.1}\\ \hline
 \hyperref[UC4.4]{UC4.4} & \hyperlink{RFO3.4}{RFO3.4}\\ \hline
 \hyperref[UC4.5]{UC4.5} & \hyperlink{RFO3.5}{RFO3.5}\\ \hline
-\hyperref[UC4.6]{UC4.6} & \hyperlink{RFO3.2.2.1}{RFO3.2.2.1}\\ \hline
+\hyperref[UC4.6]{UC4.6} & \hyperlink{RFO3.6}{RFO3.6}\\ \hline
 \hyperref[UC4.7]{UC4.7} & \hyperlink{RFD3.7}{RFD3.7}\\ \hline
 \hyperref[UC4.8]{UC4.8} & \hyperlink{RFD3.8}{RFD3.8}\\ \hline
 \hyperref[UC4.9]{UC4.9} & \hyperlink{RFD3.9}{RFD3.9}\\ \hline
@@ -4364,7 +4353,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hline
 \textbf{Tipo} & \textbf{Obbligatorio} & \textbf{Desiderabile} & \textbf{Facoltativo}\\
 \hline
-Funzionale & 159 & 11 & 0\\ \hline
+Funzionale & 158 & 11 & 0\\ \hline
 Prestazionale & 0 & 0 & 0\\ \hline
 Di Qualità & 8 & 0 & 2\\ \hline
 Di Vincolo & 7 & 2 & 0\\ \hline
