--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -13,7 +13,7 @@ La libreria \jointjs{} (\url{https://www.jointjs.com/opensource}) è una libreri
 La libreria sfrutta le seguenti tecnologie per il suo funzionamento:
 
 \begin{itemize}
-	\item \\gloss{html}{}: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<svg>}, che conterrà un diagramma.
+	\item \html{}: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<canvas>}, che conterrà un diagramma.
 	\item Le seguenti librerie \js{}:
 	\begin{itemize}
 		\item \jquery{};
@@ -44,13 +44,22 @@ assertions, test di regressione
 \subsubsection{sinonjs}
 stubs, mocks, (test spies??)
 
+
+
+
 \subsection{Server}
 
 
-\subsubsection{Apache \gloss{Tomcat}}
+\subsubsection{Apache Tomcat}
 % ...
 
 \subsubsection{Pivotal Spring}
+% ...
+
+\subsubsection{StringReplace}
+% ...
+
+\subsubsection{Google Gson}
 % ...
 
 %%% [altro...]
