sistemato PdP dopo faccio in consuntivo

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -59,9 +59,9 @@ Esso è suddiviso nelle seguenti sezioni:
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
 	\item \NdP;
-	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.\gloss{pdf}}, visitato il 07/02/2017;
+	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 07/02/2017;
 	\item Regolamento del progetto didattico] \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 07/02/2017;
-	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.\gloss{html}}, visitato il 07/02/2017.
+	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 07/02/2017.
 \end{itemize}
 \subsubsection{Riferimenti informativi} \label{sec:ref}
 \begin{itemize}
@@ -621,7 +621,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     \GG & 0 & 0 & 0 & 0 & 0 & 30 & 30 \\ \hline
     \MM & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ \hline
     \LS & 0 & 0 & 125 & 0 & 0 & 0 & 125 \\ \hline
-    \AZ & 0 & 0 & 200 & 0 & 0 & 30 & 200 \\ \hline
+    \AZ & 0 & 0 & 200 & 0 & 0 & 0 & 200 \\ \hline
     \rowcolor[gray]{.9}
 
     Totale euro/ruolo & 0 & 0 & 325 & 0 & 0 & 30 & 355 \\ \hline
@@ -657,15 +657,15 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
-    \PB & 0 & 0 & 0 & 30 & 0 & 6 & 36 \\ \hline
+    \PB & 0 & 0 & 0 & 26 & 0 & 6 & 32 \\ \hline
     \LB & 0 & 3 & 0 & 38 & 0 & 1 & 42 \\ \hline
     \GG & 3 & 0 & 0 & 35 & 0 & 1 & 39 \\ \hline
-    \MM & 0 & 0 & 0 & 45 & 0 & 4 & 49 \\ \hline
-    \LS & 2 & 0 & 0 & 40 & 0 & 6 & 48 \\ \hline
-    \AZ & 0 & 0 & 0 & 36 & 0 & 4 & 40 \\ \hline
+    \MM & 0 & 0 & 0 & 42 & 0 & 4 & 46 \\ \hline
+    \LS & 2 & 0 & 0 & 36 & 0 & 6 & 44 \\ \hline
+    \AZ & 0 & 0 & 0 & 31 & 0 & 4 & 35 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 5 & 3 & 0 & 224 & 0 & 22 & 254 \\ \hline
+    Totale ore/ruolo & 5 & 3 & 0 & 208 & 0 & 22 & 238 \\ \hline
     
   \end{tabular}
 }
@@ -711,15 +711,15 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
-    \PB & 0 & 0 & 0 & 660 & 0 & 90 & 750 \\ \hline
+    \PB & 0 & 0 & 0 & 572 & 0 & 90 & 662 \\ \hline
     \LB & 0 & 60 & 0 & 836 & 0 & 15 & 911 \\ \hline
     \GG & 90 & 0 & 0 & 770 & 0 & 15 & 875 \\ \hline
-    \MM & 0 & 0 & 0 & 990 & 0 & 60 & 1050 \\ \hline
-    \LS & 60 & 0 & 0 & 880 & 0 & 90 & 1030 \\ \hline
-    \AZ & 0 & 0 & 0 & 792 & 0 & 60 & 852 \\ \hline
+    \MM & 0 & 0 & 0 & 924 & 0 & 60 & 984 \\ \hline
+    \LS & 60 & 0 & 0 & 792 & 0 & 90 & 942 \\ \hline
+    \AZ & 0 & 0 & 0 & 682 & 0 & 60 & 742 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale euro/ruolo & 150 & 60 & 0 & 4928 & 0 & 330 & 5468 \\ \hline
+    Totale euro/ruolo & 150 & 60 & 0 & 4576 & 0 & 330 & 5116 \\ \hline
     
   \end{tabular}
   
@@ -942,7 +942,7 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 
 {\hx} complessivamente ritiene di aver diviso equamente il carico di lavoro. Ogni disparità a livello di periodo è bilanciata nei periodi successivi. 
 
-Il quantitativo preventivato a persona è fissato in \textbf{138 ore} e il quantitativo di ore preventivate totali è fissato a \textbf{828 ore}.
+Il quantitativo di ore preventivate totali è fissato a \textbf{809 ore}.
 
 Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun componente di {\hx} almeno una volta. Disparità in questo senso sono inevitabili: inevitabilmente è necessaria una o più "figure di riferimento" per ogni ruolo, che impieghino più risorse per raggiungere gli incarichi più gravosi.
 
@@ -958,15 +958,15 @@ Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun compone
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
-    \PB & 10 & 11 & 14 & 48 & 30 & 25 & 138 \\ \hline
+    \PB & 10 & 11 & 14 & 44 & 30 & 25 & 134 \\ \hline
     \LB & 15 & 19 & 6 & 46 & 30 & 22 & 138 \\ \hline
     \GG & 3 & 29 & 8 & 45 & 30 & 23 & 138 \\ \hline
-    \MM & 2 & 20 & 10 & 45 & 30 & 31 & 138 \\ \hline
-    \LS & 2 & 5 & 17 & 50 & 30 & 34 & 138 \\ \hline
-    \AZ & 3 & 9 & 21 & 46 & 30 & 29 & 138 \\ \hline
+    \MM & 2 & 20 & 10 & 42 & 30 & 31 & 135 \\ \hline
+    \LS & 2 & 5 & 17 & 46 & 30 & 34 & 134 \\ \hline
+    \AZ & 3 & 9 & 21 & 41 & 30 & 29 & 133 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 35 & 93 & 76 & 280 & 180 & 164 & 828 \\ \hline
+    Totale ore/ruolo & 35 & 93 & 76 & 264 & 180 & 164 & 809 \\ \hline
     
   \end{tabular}
   }
@@ -1025,15 +1025,15 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
-    \PB & 330 & 220 & 350 & 1056 & 450 & 375 & 2751 \\ \hline
+    \PB & 300 & 220 & 350 & 968 & 450 & 375 & 2663 \\ \hline
     \LB & 450 & 380 & 150 & 1012 & 450 & 330 & 2772 \\ \hline
     \GG & 90 & 580 & 200 & 990 & 450 & 345 & 2655 \\ \hline
-    \MM & 60 & 400 & 250 & 990 & 450 & 465 & 2615 \\ \hline
-    \LS & 60 & 100 & 425 & 1100 & 450 & 510 & 2645 \\ \hline
-    \AZ & 90 & 180 & 525 & 1012 & 450 & 435 & 2692 \\ \hline
+    \MM & 60 & 400 & 250 & 924 & 450 & 465 & 2549 \\ \hline
+    \LS & 60 & 100 & 425 & 1012 & 450 & 510 & 2557 \\ \hline
+    \AZ & 90 & 180 & 525 & 902 & 450 & 435 & 2582 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale euro/ruolo & 1050 & 1860 & 1900 & 6160 & 2700 & 2460 & 16130 \\ \hline
+    Totale euro/ruolo & 1050 & 1860 & 1900 & 5808 & 2700 & 2460 & 15778 \\ \hline
   \end{tabular}
   
 }\label{tab:cgen}
@@ -1064,7 +1064,7 @@ Successivamente sono evidenziate graficamente la divisione delle ore per persona
 
 Questo quadro riassuntivo esclude il periodo di {\AR}: il totale risultante \textbf{è a carico del cliente}.
 
-Il quantitativo rendicontato a preventivo a persona varia tra le \textbf{103} e \textbf{108 ore} e il quantitativo di ore preventivate totali è fissato a \textbf{634 ore}.
+Il quantitativo rendicontato a preventivo a persona è di \textbf{103 ore} e il quantitativo di ore preventivate totali è fissato a \textbf{618 ore}.
 
 {\hx} complessivamente ritiene di aver diviso equamente il carico di lavoro, in quanto i scostamenti orari in misura minore del 5\%.
 
@@ -1079,15 +1079,15 @@ Il quantitativo rendicontato a preventivo a persona varia tra le \textbf{103} e 
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
-    \PB & 3 & 8 & 0 & 48 & 30 & 18 & 107 \\ \hline
+    \PB & 3 & 8 & 0 & 44 & 30 & 18 & 103 \\ \hline
     \LB & 3 & 8 & 0 & 46 & 30 & 16 & 103 \\ \hline
     \GG & 3 & 5 & 0 & 45 & 30 & 20 & 103 \\ \hline
-    \MM & 2 & 0 & 2 & 45 & 30 & 27 & 106 \\ \hline
-    \LS & 2 & 3 & 5 & 50 & 30 & 17 & 107 \\ \hline
-    \AZ & 2 & 5 & 8 & 46 & 30 & 17 & 108 \\ \hline
+    \MM & 2 & 0 & 2 & 42 & 30 & 27 & 103 \\ \hline
+    \LS & 2 & 3 & 5 & 46 & 30 & 17 & 103 \\ \hline
+    \AZ & 2 & 5 & 8 & 41 & 30 & 17 & 103 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 35 & 93 & 76 & 280 & 180 & 164 & 828 \\ \hline
+    Totale ore/ruolo & 15 & 29 & 15 & 264 & 180 & 125 & 618 \\ \hline
     
   \end{tabular}
   }
@@ -1115,15 +1115,15 @@ Questo quadro riassuntivo esclude il periodo di {\AR}: i costi che seguono \text
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
-    \PB & 90 & 160 & 0 & 1056 & 450 & 270 & 2026 \\ \hline
+    \PB & 90 & 160 & 0 & 968 & 450 & 270 & 1938 \\ \hline
     \LB & 90 & 160 & 0 & 1012 & 450 & 240 & 1952 \\ \hline
     \GG & 90 & 100 & 0 & 990 & 450 & 300 & 1930 \\ \hline
-    \MM & 60 & 0 & 50 & 990 & 450 & 405 & 1955 \\ \hline
-    \LS & 60 & 60 & 125 & 1100 & 450 & 255 & 2050 \\ \hline
-    \AZ & 60 & 100 & 200 & 1012 & 450 & 255 & 2077 \\ \hline
+    \MM & 60 & 0 & 50 & 924 & 450 & 405 & 1889 \\ \hline
+    \LS & 60 & 60 & 125 & 1012 & 450 & 255 & 1962 \\ \hline
+    \AZ & 60 & 100 & 200 & 902 & 450 & 255 & 1967 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale euro/ruolo & 450 & 580 & 375 & 6160 & 2700 & 1725 & 11990 \\ \hline
+    Totale euro/ruolo & 450 & 580 & 375 & 5808 & 2700 & 1725 & 11638 \\ \hline
   \end{tabular}
   
 }\label{tab:cgen}
@@ -1135,7 +1135,7 @@ Il costo totale del progetto \proj{} preventivato è arrotondato a \textbf{12000
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
-\includegraphics[width=1.2\textwidth]{img/costototale.png}}
+\includegraphics[width=1.2\textwidth]{img/costototalerendicontato.png}}
 \label{tab:cgen1}
 
   \caption{Costo totale per il progetto \proj{} per ruolo e per persona, valori in euro (\euro).}
