aggiunti riferimenti a intro.tex + tecnologie

--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -24,4 +24,8 @@ Ci è parso utile indicizzare i \emph{design patter} utilizzati; per questo, li 
 \subsubsection{Riferimenti informativi}
 \begin{itemize}
 	\item E. Gamma, R. Helm, R. Johnson, J. Vlissides, \emph{Design Patterns: Elements of Reusable Object-Oriented Software}.
+	\item Server Apache Tomcat: \url{tomcat.apache.org}, visitato in data 01/03/2017.
+	\item Libreria Pivotal Spring: \url{spring.io}, visitato in data 01/03/2017.
+	\item Libreria StringTemplate: \url{stringtemplate.org}, visitato in data 01/03/2017.
+	\item Libreria Google Gson: \url{github.com/google/gson}, visitato in data 01/03/2017.
 \end{itemize}
