--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -6,6 +6,7 @@
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
+
 \newcommand{\scopo}{
 Lo scopo del prodotto è quello di implementare un \gloss{editor} \gloss{UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da esso descritta, appartenente ad uno specifico dominio applicativo: i giochi da tavolo.
 
@@ -18,6 +19,7 @@ Il sistema offrirà le seguenti funzionalità:
 
 L'editor dovrà infine essere fruibile dall'utente attraverso un browser desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}.
 }
+
 \newcommand{\presgloss}{
 Per rendere più semplice e chiara la comprensione ed evitare ogni ambiguità relativa ai termini utilizzati nei documenti, viene allegato il documento \Glossario, nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni.
 
@@ -69,7 +71,6 @@ Per rendere più facile la lettura, la prima occorrenza di ogni termine presente
 \newcommand{\R}{\emph{Resp.}}
 \newcommand{\AM}{\emph{Amm.}}
 
-
 % Ruoli svolti estesi
 \newcommand{\Vx}{\emph{Verificatore}}
 \newcommand{\ANx}{\emph{Analista}}
@@ -96,10 +97,8 @@ Per rendere più facile la lettura, la prima occorrenza di ogni termine presente
 \emph{#1}
 \addcontentsline{pat}{pattern}{\protect\numberline{\thepattern}#1}}
 
-
-
-
-\newcommand{\js}{\emph{Javascript}}
+% Macro per tecnologie:
+\newcommand{\js}{\emph{JavaScript}}
 \newcommand{\jointjs}{\emph{JointJS}}
 \newcommand{\html}{\emph{HTML5}}
 \newcommand{\jquery}{\emph{jQuery}}
