--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -53,13 +53,18 @@ stubs, mocks, (test spies??)
 Il \emph{back end} della nostra applicazione è ospitato su un server Apache Tomcat, come richiesto dal capitolato d'appalto nel caso il \emph{back end} fosse scritto in Java.
 
 \subsubsection{Pivotal Spring}
-Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source Spring, utile per aderire ai princìpi dello stile REST.
+Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source Spring (disponibile all'indirizzo \url{spring.io}), utile per aderire ai princìpi dello stile architetturale REST.
 
 \subsubsection{StringTemplate}
-StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Il server la utilizza per popolare dei template (scritti nel linguaggio di mark-up definito da StringTemplate) con i dati ricevuti dal client.
+StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Il server la utilizza per:
+\begin{enumerate}
+	\item creare dei template di codice Java, inframmezzati da speciali marcatori definiti da StringTemplate;
+	\item popolare tali template con i dati ricevuti dal client.
+\end{enumerate}
+I marcatori definiti dalla libreria servono da segnaposto per ospitare i dati ottenuti analizzando il documento JSON generato dal client.
 
 \subsubsection{Google Gson}
-Google Gson è una libreria 
+Google Gson è una libreria open-source disponibile all'indirizzo \url{github.com/google/gson}. Essa permette di convertire un oggetto JSON in un oggetto Java che abbia, come campi dati, un sovrainsieme delle chiavi presenti nell'oggetto JSON; l'oggetto JSON dev'essere contenuto in una stringa Java. I valori delle chiavi dell'oggetto JSON diventano i valori dei campi dati dell'oggetto Java. La libreria permette anche il procedimento inverso (da Java a JSON), che però non usiamo nella nostra applicazione.
 
 %%% [altro...]
 
