iniziata descr. architettura

--- a/doc/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/arch.tex
@@ -3,20 +3,30 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Metodo e formalismo di specifica}
-blablablablablabla
+Suddividiamo la descrizione dell'architettura di \proj{} in tre sezioni:
+\begin{itemize}
+	\item §\ref{sec:arch_client}, che descrive il \emph{front end} dell'applicazione;
+	\item §\ref{sec:arch_server}, che descrive il \emph{back end} dell'applicazione;
+	\item §\ref{sec:arch_proto}, che descrive il protocollo che lega le due interfacce precedenti.
+\end{itemize}
+Per ognuna di queste sezioni, descriviamo l'architettura del sistema con metodo \emph{top-down} --- dal generale al particolare --- utilizzando i formalismi di UML 2.0.
+
 \subsection{Architettura generale}
-L'architettura dell'applicazione è suddivisa in due moduli(REST ecce ecce).....
+L'architettura dell'applicazione è suddivisa in due moduli (REST ecce ecce).....
 \begin{enumerate}
-\item Client
-\item Server
+	\item Client
+	\item Server
 \end{enumerate}
-\subsubsection{Architetura Client}
+
+\subsection{Architetura Client} \label{sec:arch_client}
 menos e berga
-\subsubsection{Architettura Server}
+
+\subsection{Architettura Server} \label{sec:arch_server}
 Il server si occupa di fornire servizi REST ed elaborare le richieste (i dati) in arrivo dal client. Il back-end del server è stato suddiviso nei seguenti due moduli (penso):
 \begin{itemize}
-\item controller: rappresenta il core del back-end. Si occupa di ricevere ed elaborare le richieste provenienti dal client.
-\item endpoints: per la REST (ce l'abbiamo???)
+	\item controller: rappresenta il core del back-end. Si occupa di ricevere ed elaborare le richieste provenienti dal client.
+	\item endpoints: per la REST (ce l'abbiamo???)
 \end{itemize}
-\subsubsection{Protocollo di comunicazione Client-Server}
+
+\subsection{Protocollo di comunicazione client-server} \label{sec:arch_proto}
 %%% [...]
